--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon ./index.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/Erichain/elasticsearch-with-koa#readme",
   "dependencies": {
-    "koa": "^2.5.1"
+    "axios": "^0.18.0",
+    "koa": "^2.5.1",
+    "shelljs": "^0.8.1"
   }
 }
