--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Erichain/elasticsearch-with-koa#readme",
   "dependencies": {
     "axios": "^0.18.0",
+    "dateformat": "^3.0.3",
     "koa": "^2.5.1",
     "shelljs": "^0.8.1"
   }
